@@ -1,7 +1,9 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+    "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
   <title>The XML C library for Gnome</title>
-  <meta name="GENERATOR" content="amaya V4.0">
+  <meta name="GENERATOR" content="amaya V4.1">
   <meta http-equiv="Content-Type" content="text/html">
 </head>
 
@@ -52,6 +54,8 @@ alt="W3C Logo"></a></p>
   <li><a href="encoding.html">libxml Internationalization support</a></li>
   <li><a href="xmlio.html">libxml Input/Output interfaces</a></li>
   <li><a href="xmlmem.html">libxml Memory interfaces</a></li>
+  <li><a href="xmldtd.html">a short introduction about DTDs and
+  libxml</a></li>
 </ul>
 
 <h2><a name="Introducti">Introduction</a></h2>
@@ -1374,6 +1378,6 @@ Gnome CVS base under gnome-xml/example</p>
 
 <p><a href="mailto:Daniel.Veillard@w3.org">Daniel Veillard</a></p>
 
-<p>$Id: xml.html,v 1.57 2000/10/25 13:32:38 veillard Exp $</p>
+<p>$Id: xml.html,v 1.58 2000/11/13 18:22:47 veillard Exp $</p>
 </body>
 </html>
